# MLOPS

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  etl.sh  pyproject.toml  requirements.txt  run_experiments.py  setup.cfg  start.sh
configs/: config_1.json  config_2.json  config_3.json  config_4.json  config_5.json
docs/: mkdocs.yml
docs/docs/: index.md
mlops/: __init__.py  config.py  dataset.py  features.py  plots.py  test.py
mlops/modeling/: predict.py  train.py
s3_utils/: download_file.py  upload_file.py
