[tool.poetry]
name = "mlops"
version = "0.1.0"
description = "A project for the first steps in learning mlops"
authors = ["vdmdrzdv <drovadim@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
awscli = "^1.35.20"
black = "^24.10.0"
flake8 = "^7.1.1"
mypy = "^1.13.0"
pre-commit = "^4.0.1"
isort = "^5.13.2"
loguru = "^0.7.2"
mkdocs = "^1.6.1"
pip = "^24.3.1"
python-dotenv = "^1.0.1"
tqdm = "^4.67.0"
types-pygments = "^2.18.0.20240506"
types-colorama = "^0.4.15.20240311"
types-decorator = "^5.1.8.20240310"
types-jsonschema = "^4.23.0.20240813"
types-six = "^1.16.21.20241105"
types-tqdm = "^4.66.0.20240417"
typer = "^0.12.5"
boto3 = "^1.35.54"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
